Fix visualizacion iPhone 6/7/8

--- a/static/css/listado_productos.css
+++ b/static/css/listado_productos.css
@@ -1103,6 +1103,11 @@ hr.detalle
         left: -95px;
     }
 
+    .btn-success.comprar.menu-btn-comprar
+    {
+        right: 36%;
+        bottom: 5%;
+    }
 }
 
 /* Galaxy S5 */
